# MCPCheck

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  USAGE.md  mcpguard_specs.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: USAGE.md
src/mcpcheck/: __init__.py
src/mcpcheck/adapters/: __init__.py  fs.py  http.py  llm.py  otel.py
src/mcpcheck/cli/: __init__.py  main.py
src/mcpcheck/domain/: __init__.py  exceptions.py  models.py  policy.py  report.py
src/mcpcheck/engine/: __init__.py  interceptor.py  policy_engine.py  scanner.py  semantic.py
src/mcpcheck/renderers/: __init__.py  json_renderer.py  sarif_renderer.py  terminal.py
src/mcpcheck/rules/: __init__.py  auth_exposure.py  base.py  dynamic_schema.py  over_permission.py  tool_poison.py
tests/: __init__.py  conftest.py
tests/fixtures/manifests/: cursor_mcp.json  dangerous_combo.json  insecure_real_world.json  poisoned_tool.json  real_world_examples.json  safe_manifest.json  secure_config.json
tests/fixtures/policies/: default.yaml
tests/unit/: __init__.py  test_auth_exposure_rule.py  test_policy_engine.py  test_report_models.py  test_scanner.py  test_tool_poison_rule.py
