[project]
name = "mcpcheck"
version = "0.1.0"
description = "Security scanner for Model Context Protocol (MCP) servers — detects prompt injection, auth exposure, over-permissioning, and more."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "MCPCheck Contributors" }]
keywords = [
    "mcp",
    "security",
    "scanner",
    "llm",
    "agent",
    "owasp",
    "mitre",
    "prompt-injection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "anyio>=4.3.0",
    "litellm>=1.30.0",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.98.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "bandit>=1.7.7",
    "pre-commit>=3.6.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
mcpcheck = "mcpcheck.cli.main:app"

[project.urls]
Homepage = "https://github.com/mcpcheck/mcpcheck"
Documentation = "https://mcpcheck.github.io/mcpcheck"
Repository = "https://github.com/mcpcheck/mcpcheck"
Issues = "https://github.com/mcpcheck/mcpcheck/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpcheck"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "S",      # flake8-bandit
    "RUF",    # Ruff-specific rules
]
ignore = [
    "S101",   # assert is fine in tests
    "S603",   # subprocess without shell=True is fine
    "S607",   # partial path to executable
]

[tool.ruff.lint.isort]
known-first-party = ["mcpcheck"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["litellm.*", "opentelemetry.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "--strict-markers -ra -q"

[tool.coverage.run]
source = ["src/mcpcheck"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
# Phase 1: Core scanner tested. Adapters, CLI, renderers are Phase 2-4.
# fail_under = 90

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]
